Change of structure, add functions

--- a/Initial_notebook.ipynb
+++ b/Initial_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,58 +16,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.trefl.com/puzzle/500-elementow?product_list_limit=all'\n",
-    "response = requests.get(url)\n",
-    "html_content = response.text"
+    "kids_puzzles_url = 'https://www.trefl.com/puzzle/dla-dzieci?product_list_limit=all'\n",
+    "adults_puzzles_url = 'https://www.trefl.com/puzzle/dla-doroslych?product_list_limit=all'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_links(content):\n",
+    "    soup = BeautifulSoup(content, 'html.parser')\n",
+    "    puzzles_list = soup.find('body')\n",
+    "    puzzles_list_items = puzzles_list.find('ol')\n",
+    "    list_items = puzzles_list_items.find_all('li')\n",
+    "    links = []\n",
+    "\n",
+    "    for puzzles in list_items:\n",
+    "        a = puzzles.select_one('a')\n",
+    "        if 'href' in a.attrs:\n",
+    "            link_url = a.get('href')\n",
+    "        links.append(link_url)\n",
+    "    return links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_list_of_images(links):\n",
+    "    data = []\n",
+    "    for link in links:\n",
+    "        response = requests.get(link)\n",
+    "        html_content = response.text\n",
+    "        soup = BeautifulSoup(html_content, \"html.parser\")\n",
+    "\n",
+    "        # x = soup.select('meta[name=]')\n",
+    "\n",
+    "        elements = soup.find_all('div', class_ = 'product-content__img')\n",
+    "        tag = BeautifulSoup(str(elements[0])).div\n",
+    "        data.append(tag.img['src'])\n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_batch_of_links = get_links((requests.get(kids_puzzles_url)).text)\n",
+    "second_batch_of_links = get_links((requests.get(adults_puzzles_url)).text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67\n"
+      "332\n",
+      "351\n",
+      "683\n"
      ]
     }
    ],
    "source": [
-    "soup = BeautifulSoup(html_content, 'html.parser')\n",
-    "puzzles_list = soup.find('body')\n",
-    "puzzles_list_items = puzzles_list.find('ol')\n",
-    "list_items = puzzles_list_items.find_all('li')\n",
-    "links = []\n",
-    "\n",
-    "for puzzles in list_items:\n",
-    "    a = puzzles.select_one('a')\n",
-    "    if 'href' in a.attrs:\n",
-    "        link_url = a.get('href')\n",
-    "        links.append(link_url)\n",
-    "\n",
-    "print(len(links))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_list = []\n",
-    "for link in links:\n",
-    "    response = requests.get(link)\n",
-    "    html_content = response.text\n",
-    "    soup = BeautifulSoup(html_content, \"html.parser\")\n",
-    "    elements = soup.find_all('div', class_ = 'product-content__img')\n",
-    "    tag = BeautifulSoup(str(elements[0])).div\n",
-    "    image_list.append(tag.img['src'])\n"
+    "print(len(first_batch_of_links))\n",
+    "print(len(second_batch_of_links))\n",
+    "all_links = first_batch_of_links + second_batch_of_links\n",
+    "print(len(all_links))"
    ]
   },
   {
@@ -84,6 +112,7 @@
     }
    ],
    "source": [
+    "image_list = get_list_of_images(all_links)\n",
     "img_response = requests.get(image_list[0], stream=True)\n",
     "img = Image.open(img_response.raw)\n",
     "img.show()"
@@ -108,6 +137,25 @@
     "    image = requests.get(image_url).content\n",
     "    with open(image_file_path, 'wb') as image_file:\n",
     "        image_file.write(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = requests.get('https://www.trefl.com/media/catalog/product/cache/156aa98354d850d09b96ecaf7fdf85e2/2/9/29516_150_02.png',\n",
+    "                    stream=True)\n",
+    "im = Image.open(resp.raw)\n",
+    "im.show()\n",
+    "test_dir = os.path.join(os.curdir, 'test')\n",
+    "if not os.path.isdir(test_dir):\n",
+    "    os.mkdir(test_dir)\n",
+    "test_file_path = os.path.join(test_dir, 'panoramic.png')\n",
+    "im_test = requests.get('https://www.trefl.com/media/catalog/product/cache/156aa98354d850d09b96ecaf7fdf85e2/2/9/29516_150_02.png').content\n",
+    "with open(test_file_path, 'wb') as test_file:\n",
+    "    test_file.write(im_test)"
    ]
   },
   {
