Add the condition to omit some of the pictures

--- a/Initial_notebook.ipynb
+++ b/Initial_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,12 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
-    "from io import BytesIO\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_list_of_images(links):\n",
+    "    excluded_keywords = ['panoramiczne', 'drewniane', 'Megabox']\n",
     "    data = []\n",
     "    for link in links:\n",
     "        response = requests.get(link)\n",
     "        html_content = response.text\n",
     "        soup = BeautifulSoup(html_content, \"html.parser\")\n",
     "\n",
-    "        # x = soup.select('meta[name=]')\n",
-    "\n",
+    "        keywords = soup.find('meta', attrs={'name': 'keywords'})['content']\n",
+    "        if any([keyword in keywords for keyword in excluded_keywords]):\n",
+    "            continue\n",
+    "        \n",
     "        elements = soup.find_all('div', class_ = 'product-content__img')\n",
     "        tag = BeautifulSoup(str(elements[0])).div\n",
     "        data.append(tag.img['src'])\n",
