Scrapper is returning now dict with images and age labels

--- a/Initial_notebook.ipynb
+++ b/Initial_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
-    "import os"
+    "import os\n",
+    "import re"
    ]
   },
   {
@@ -46,31 +47,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_list_of_images(links):\n",
+    "def get_list_of_images_and_age_categories(links):\n",
     "    excluded_keywords = ['panoramiczne', 'drewniane', 'Megabox']\n",
-    "    data = []\n",
+    "    image_and_category_dict = {}\n",
+    "    invalid_links = []\n",
+    "    if len(image_and_category_dict) / 50 == 0:\n",
+    "                    print(f'Dict have {len(image_and_category_dict)} items.')\n",
     "    for link in links:\n",
     "        response = requests.get(link)\n",
     "        html_content = response.text\n",
     "        soup = BeautifulSoup(html_content, \"html.parser\")\n",
     "\n",
-    "        keywords = soup.find('meta', attrs={'name': 'keywords'})['content']\n",
-    "        if any([keyword in keywords for keyword in excluded_keywords]):\n",
-    "            continue\n",
+    "        try:\n",
+    "            keywords = soup.find('meta', attrs={'name': 'keywords'})['content']\n",
+    "        except Exception as e:\n",
+    "            print(f'{e} in link: {link}')\n",
+    "        else:\n",
+    "            if any([keyword in keywords for keyword in excluded_keywords]):\n",
+    "                continue\n",
     "        \n",
-    "        elements = soup.find_all('div', class_ = 'product-content__img')\n",
-    "        tag = BeautifulSoup(str(elements[0])).div\n",
-    "        data.append(tag.img['src'])\n",
-    "    return data\n"
+    "            elements = soup.find_all('div', class_ = 'product-content__img')\n",
+    "            category = soup.find_all('div', class_ = 'c-product-attributes')\n",
+    "            years = BeautifulSoup(str(category[0])).div   \n",
+    "            if len(category) > 1:\n",
+    "                years = BeautifulSoup(str(category[1])).div           \n",
+    "            tag = BeautifulSoup(str(elements[0])).div\n",
+    "            try:\n",
+    "                tag_content = tag.img['src']\n",
+    "                years_content =  re.split(r\"([0-9]+)\", years.img['src'])[-2]\n",
+    "            except Exception as e:\n",
+    "                invalid_links.append(link)\n",
+    "                print(f'{e} in link: {link}')\n",
+    "            else:\n",
+    "                image_and_category_dict[tag_content] = years_content\n",
+    "    return image_and_category_dict, invalid_links\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -102,62 +121,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.trefl.com/media/catalog/product/cache/156aa98354d850d09b96ecaf7fdf85e2/3/7/37395_150_02.png\n"
+      "Dict have 0 items.\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/w-swiecie-transformers-23024\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/urocze-bobaski-31414\n",
+      "'src' in link: https://www.trefl.com/sorter-kolorow-93162\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/treflikowy-dzien-93166\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/farma-44000\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/zabawny-swiat-binga-93165\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/zabawy-peppy-93164\n",
+      "'src' in link: https://www.trefl.com/rybka-minimini-36125\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/bohaterski-spider-man-34384\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/niezwyciezeni-avengersi-17357\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/minionki-w-akcji-13264\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/zabawy-z-kotkami-31388\n",
+      "'src' in link: https://www.trefl.com/bing-pierwsze-skojarzenia-02061\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/baby-yoda-16413\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/gotowi-by-pomagac-18244\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/wakacyjna-zabawa-17326\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/pojazdy-strazaka-sama-16354\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/strazak-sam-w-akcji-34844\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/gotowi-do-akcji-17321\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/magiczny-swiat-enchantimals-18236\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/niezwykly-swiat-dinozaurow-34837\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/wyscig-na-torach-18230\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/bob-i-wendy-17300\n",
+      "'src' in link: https://www.trefl.com/kostki-do-ukladania-las\n",
+      "'src' in link: https://www.trefl.com/dzien-peppy-90600\n",
+      "'src' in link: https://www.trefl.com/baby-cubes-na-farmie-little-planet\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/budapeszt-wegry-37395\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/puchar-polski-10633\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/puzzle-mariusz-wlazly\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/paris-france-37456\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/maze-of-colors-37460\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/over-the-water-37459\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/cappadocia-turkey-37458\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/nowosc-ss23-37455\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/tiger-encounter-37453\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/venice-italy-37457\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/hypnotizing-gaze-37454\n",
+      "'src' in link: https://www.trefl.com/the-journey-of-thousand-miles-81025\n",
+      "'src' in link: https://www.trefl.com/not-so-classic-art-collection-81021\n",
+      "'src' in link: https://www.trefl.com/the-greatest-disney-collection-81020\n",
+      "'src' in link: https://www.trefl.com/the-ultimate-marvel-collection-81024\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/pamiatki-z-hogwartu-37400\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/portret-tygrysa-37397\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/most-rialto-wenecja-37398\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/rovinj-chorwacja-27114\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/widok-na-kapadocje-10613\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/minionki-29049\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/podroz-do-wloch-29505\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/puszysta-ekipa-29504\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/latarnia-morska-w-melagavi-10436\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/zachod-slonca-nad-santorini-10435\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/londyn-o-swicie-10395\n",
+      "'NoneType' object is not subscriptable in link: https://www.trefl.com/nowy-jork-o-swicie\n"
      ]
     }
    ],
    "source": [
-    "image_list = get_list_of_images(all_links)\n",
-    "img_response = requests.get(image_list[0], stream=True)\n",
+    "image_and_category_dict, bad_links = get_list_of_images_and_age_categories(all_links)\n",
+    "img_response = requests.get(list(image_and_category_dict.keys())[0], stream=True)\n",
     "img = Image.open(img_response.raw)\n",
     "img.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "484"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "image_name = ''\n",
-    "image_dir_name = 'images'\n",
-    "image_dir = os.path.join(os.curdir, image_dir_name)\n",
-    "if not os.path.isdir(image_dir):\n",
-    "    os.mkdir(image_dir)\n",
-    "\n",
-    "for i, image in enumerate(image_list):\n",
-    "    image_name = f'{i + 1}.png'\n",
-    "    image_file_path = os.path.join(image_dir, image_name)\n",
-    "    image_url = image_list[i]\n",
-    "    image = requests.get(image_url).content\n",
-    "    with open(image_file_path, 'wb') as image_file:\n",
-    "        image_file.write(image)"
+    "len(image_and_category_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bad_links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get('https://www.trefl.com/media/catalog/product/cache/156aa98354d850d09b96ecaf7fdf85e2/2/9/29516_150_02.png',\n",
-    "                    stream=True)\n",
-    "im = Image.open(resp.raw)\n",
-    "im.show()\n",
-    "test_dir = os.path.join(os.curdir, 'test')\n",
-    "if not os.path.isdir(test_dir):\n",
-    "    os.mkdir(test_dir)\n",
-    "test_file_path = os.path.join(test_dir, 'panoramic.png')\n",
-    "im_test = requests.get('https://www.trefl.com/media/catalog/product/cache/156aa98354d850d09b96ecaf7fdf85e2/2/9/29516_150_02.png').content\n",
-    "with open(test_file_path, 'wb') as test_file:\n",
-    "    test_file.write(im_test)"
+    "for key, value in image_and_category_dict.items():\n",
+    "    if not os.path.exists(value):\n",
+    "        os.makedirs(value)\n",
+    "    response = requests.get(key)\n",
+    "    image_name = f\"{key.split('/')[-1]}.png\"\n",
+    "    image_path = os.path.join(value, image_name)\n",
+    "    image = response.content\n",
+    "    with open (image_path, 'wb') as file:\n",
+    "        file.write(image)"
    ]
   },
   {
